<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <!-- CardView containing the FragmentContainerView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.lucasliberatore.pokedex.NavFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />
    </androidx.cardview.widget.CardView>

    <!-- CardView for the About Section -->
    <androidx.cardview.widget.CardView
        android:id="@+id/aboutCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@android:color/white"
        android:background="@drawable/rounded_top_white_background"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/appDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/appdetail"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/appDes1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des1"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/appDes2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des2"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/appDes3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des3"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/appDes4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des4"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/groupMembers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/groupmember"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/groupMember1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luke"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/groupMember2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daivd"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
